--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
   },
   "require": {
     "php": ">=8.1",
-    "mjfk23/gadget-core": "dev-main",
+    "mjfk23/gadget-core": "^1.0",
     "monolog/monolog": "^3.7",
     "psr/log": "^3.0"
   },
