--- a/composer.json
+++ b/composer.json
@@ -26,18 +26,11 @@
     "phpstan/phpstan": "^1.12",
     "phpstan/phpstan-strict-rules": "^1.6",
     "phpstan/extension-installer": "^1.4",
-    "phpunit/phpunit": "^10.0",
-    "squizlabs/php_codesniffer": "^3.10",
-    "vimeo/psalm": "^5.26"
+    "squizlabs/php_codesniffer": "^3.10"
   },
   "autoload": {
     "psr-4": {
       "Gadget\\Log\\": "src/"
-    }
-  },
-  "autoload-dev": {
-    "psr-4": {
-      "Gadget\\Log\\Tests\\": "tests/"
     }
   },
   "config": {
@@ -50,8 +43,6 @@
   },
   "scripts": {
     "phpcs": "vendor/bin/phpcs",
-    "phpstan": "vendor/bin/phpstan analyse -c phpstan.neon",
-    "psalm": "vendor/bin/psalm --no-cache",
-    "phpunit": "vendor/bin/phpunit"
+    "phpstan": "vendor/bin/phpstan analyse -c phpstan.neon"
   }
 }
