--- a/composer.json
+++ b/composer.json
@@ -17,20 +17,21 @@
     "source": "https://github.com/mjfk23/gadget-logging"
   },
   "require": {
-    "php": ">=8.1",
-    "mjfk23/gadget-core": "^1.0",
+    "php": "^8.1",
+    "mjfk23/gadget-core": "^2.0",
+    "mjfk23/symfony-bundle": "^1.0",
     "monolog/monolog": "^3.7",
     "psr/log": "^3.0"
   },
   "require-dev": {
-    "phpstan/phpstan": "^1.12",
-    "phpstan/phpstan-strict-rules": "^1.6",
+    "phpstan/phpstan": "^2.0",
+    "phpstan/phpstan-strict-rules": "^2.0",
     "phpstan/extension-installer": "^1.4",
     "squizlabs/php_codesniffer": "^3.10"
   },
   "autoload": {
     "psr-4": {
-      "Gadget\\Log\\": "src/"
+      "Gadget\\Log\\": ["src/", "bundle/"]
     }
   },
   "config": {
